--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,18 @@
   cursor: pointer;
 }
 
+.popup__button-disabled {
+  opacity: 0.2;
+  color: #000;
+  border: 2px solid #000;
+  background-color: transparent;
+}
+
+.popup__button-disabled:hover {
+  cursor: default;
+  background: none;
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
