--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -17,3 +17,11 @@
     padding: 30px 20px;
   }
 }
+
+.popup__delete-card-container {
+  min-height: 181px;
+}
+
+.popup__edit-image-container {
+  min-height: 272px;
+}
