--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,3 +1,5 @@
+@import url('./input-error.css');
+
 .popup__input {
   width: 100%;
   height: 47px;
@@ -7,7 +9,7 @@
   line-height: 18px;
   box-sizing: border-box;
   padding: 10px 0 0;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .popup__input:last-of-type {
